# llm_scanner

./: .env  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  docker-compose.vllm.yaml  docker-compose.yml  main.py  neo4j.conf  pyproject.toml
.github/instructions/: PROJECT.instructions.md
.zed/: debug.json
config/: best_cpg_structural.yaml  best_current.yaml  best_evidence_budgeted.yaml  best_multiplicative_boost.yaml  budgeted_ranking_config_default.yaml  ranking_coefficients_cpg_structural.yaml  ranking_coefficients_current.yaml
docs/: CPG_PARSERS.md  cpg_building.md  evidence_aware_budgeted_ranking.md  evidence_aware_budgeted_ranking_ru.md  ranking_system.md  ranking_system_ru.md
examples/: parser_comparison.py
llm_scanner/: cli.py  context_assembler.py  diff_parser.py  logging_utils.py  pipeline.py  sarif_exporter.py  utils.py
llm_scanner/clients/: anthropic_batch.py  neo4j.py  neo4j_client.py  openai_compatible.py
llm_scanner/clients/analyzers/: bandit.py  bandit_scanner.py  base.py  dlint_scanner.py  pysa.py
llm_scanner/entrypoints/: base.py  cli.py  load_all_samples_to_neo4j.py  load_sample_to_neo4j.py  run_pipeline.py  test.py
llm_scanner/loaders/: _serialization.py  bandit_report.py  graph_loader.py  graph_queries.py  json_loader.py  yaml_loader.py
llm_scanner/models/: __init__.py  bandit_report.py  base.py  context.py  context_ranking.py  dlint_report.py  edge.py  node.py  node_entities.py  pysa_report.py  ranking_strategy.py  scan.py
llm_scanner/models/benchmark/: benchmark.py  cleanvul.py  cvefixes.py
llm_scanner/models/edges/: __init__.py  analysis.py  base.py  call_graph.py  control_flow.py  core.py  data_flow.py
llm_scanner/models/nodes/: __init__.py  base.py  call_site.py  code.py  finding.py  module_node.py  taint.py  variable.py
llm_scanner/pysa_models/: sanitizers.pysa  sinks.pysa  sources.pysa  taint.config
llm_scanner/repositories/: _serialization.py  bandit.py  base.py  context.py  dlint_report.py  dot_loader.py  graph.py  json_loader.py  queries.py  yaml_loader.py
llm_scanner/scripts/: run_codeql.sh
llm_scanner/services/: ast_cpg_parser.py  bandit_analyzer.py  bandit_scanner.py  cpg_parser.py  deadcode.py  dlint_scanner.py  formatting.py  graph_loader.py  llm_review.py  remove_comments.py  snippet_reader.py  source_code.py  tree_sitter_cpg_parser.py
llm_scanner/utils/: make_parseable_source.py  treesitter_helpers.py
scripts/: concat_benchmarks.py  concat_compare_rankings.py  export_best_coefficients.sh  tune_ranking_coefficients.py
tests/: conftest.py  consts.py  docker-compose.test.yml  sample.py  test_both_parsers.py  test_context_assembler.py  test_cpg_parser.py  test_diff_parser.py  test_dot_loader.py  test_encoding.py  test_json_loader.py  test_neo4j_repositories.py  test_sarif_exporter.py  test_simple_variables.py  test_tree_sitter_structured.py  test_yaml_loader.py  utils.py
tests/clients/: test_anthropic_batch.py  test_openai_compatible.py
tests/data/: classes.py  imports.py  sample.py
tests/data/calls/: function_calls.py  (+5 more)
tests/models/: test_context_ranking.py
tests/repositories/: conftest.py  test_bandit_findings_repository.py  test_context_repository.py  test_dlint_findings_repository.py  test_graph_repository.py  test_queries.py
tests/sample_project/: main.py
tests/services/: test_llm_review.py  test_source_code.py
(+117 files in other folders)
