[project]
name = "llm-scanner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "neo4j>=5.23.1",
    "pydantic>=2.7.0",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.1",
    "bandit>=1.8.6",
    "flake8>=7.1.1",
    "dlint>=0.16.0",
    "deadcode>=2.4.1",
    "black>=25.1.0",
    "shushpy>=0.0.1.dev2",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pre-commit>=3.7.0",
    "deadcode>=2.4.1",
    "types-pyyaml>=6.0.12.20250809",
]

[project.scripts]
llm-scanner-cpg = "llm_scanner.cpg_parser:main"
llm-scanner-load-sample = "entrypoints.load_sample_to_neo4j:main"
llm-scanner-load-all = "entrypoints.load_all_samples_to_neo4j:main"

[tool.mypy]
explicit_package_bases = true
mypy_path = "llm_scanner/"
