[project]
name = "llm-scanner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "neo4j>=5.23.1",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.1",
    "bandit>=1.8.6",
    "flake8>=7.1.1",
    "dlint>=0.16.0",
    "tree-sitter-python>=0.25.0",
    "tree-sitter>=0.25.2",
    "typer>=0.15.1",
]

[dependency-groups]
dev = [
    "isort>=5.13.2",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pre-commit>=3.7.0",
    "deadcode>=2.4.1",
    "types-pyyaml>=6.0.12.20250809",
    "ruff>=0.9.6",
]

[project.scripts]
llm-scanner = "llm_scanner.cli:app"

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["llm_scanner*"]
exclude = ["output*", "tests*", "llm_scanner.egg-info*"]

[tool.mypy]
explicit_package_bases = true
mypy_path = "llm_scanner/"
exclude = "tests/.*"


[tool.pytest.ini_options]
pythonpath = "llm_scanner"

[tool.isort]
profile = "black"
src_paths = ["llm_scanner"]
known_first_party = ["llm_scanner", "tests"]
line_length = 100
skip = [
  "tests/data",
  ".venv",
  "venv",
  ".env",
  "env",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["llm_scanner"]
extend-exclude = [
  "tests/data",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
fixable = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["llm_scanner"]